[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evening-measurements-bot"
version = "0.1.0"
description = "Personal Russian Telegram diary bot for evening wellbeing measurements."
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13.1",
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.2",
  "openai>=1.51.0",
  "openpyxl>=3.1.5",
  "orjson>=3.10.7",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-multipart>=0.0.9",
  "SQLAlchemy>=2.0.35",
  "tenacity>=9.0.0",
  "tzdata>=2026.1",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["misc", "list-item", "prop-decorator", "type-arg", "union-attr", "unused-ignore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
